@@ -6,6 +6,9 @@ Changes
 
 * Fixed issue CZMQ-7, wrong name used for czmq man page.
 
+* Changed zsocket_connect() to return 0 or -1, since zmq_connect() now
+  checks endpoints properly (issue LIBZMQ-207).
+
 
 CZMQ version 1.1.0 (stable), released on 2011/08/30
 ===================================================
